<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Questionnaire">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            >

            <ImageButton
                android:id="@+id/BtnCancel"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="10sp"
                android:layout_marginLeft="10sp"
                android:backgroundTint="#F9F9F9"
                android:onClick="Cancel"
                android:src="@mipmap/cancel" />

            <TextView
                android:id="@+id/TxtTittle"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="20sp"
                android:layout_marginTop="80sp"
                android:layout_marginEnd="20sp"
                android:text="Responder diagnóstico"
                android:textAlignment="center"
                android:textColor="#365B6D"
                android:textSize="50sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="109dp"
                tools:layout_editor_absoluteY="26dp" />

            <TextView
                android:id="@+id/txtPregunta1"
                style="@style/Widget.AppCompat.AutoCompleteTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/TxtTittle"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginHorizontal="40dp"
                android:layout_marginStart="20sp"
                android:layout_marginTop="50sp"
                android:layout_marginEnd="20sp"
                android:backgroundTint="#FFF"
                android:ems="10"
                android:selectAllOnFocus="false"
                android:singleLine="false"
                android:text="@string/Pregunta1"
                android:textColor="#365B6D"
                android:textSize="14sp"
                android:typeface="normal"
                tools:layout_editor_absoluteX="43dp"
                tools:layout_editor_absoluteY="191dp" />

            <Spinner
                android:id="@+id/edTxtPregunta1"
                android:layout_width="326dp"
                android:layout_height="53dp"
                android:layout_below="@+id/txtPregunta1"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginHorizontal="40dp"
                android:layout_marginStart="20sp"
                android:layout_marginTop="10sp"
                android:layout_marginEnd="20sp"
                android:backgroundTint="#ECECEC"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:textColor="#4D4C4C"
                android:prompt="@string/R1P1"
                android:entries="@array/RespuestasP1"
                tools:layout_editor_absoluteX="44dp"
                tools:layout_editor_absoluteY="245dp" />

            <TextView
                android:id="@+id/txtPregunta2"
                style="@style/Widget.AppCompat.AutoCompleteTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edTxtPregunta1"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginHorizontal="40dp"
                android:layout_marginStart="20sp"
                android:layout_marginTop="10sp"
                android:layout_marginEnd="20sp"
                android:backgroundTint="#FFF"
                android:ems="10"
                android:selectAllOnFocus="false"
                android:singleLine="false"
                android:text="@string/Pregunta2"
                android:textColor="#365B6D"
                android:textSize="14sp"
                android:typeface="normal"
                tools:layout_editor_absoluteX="43dp"
                tools:layout_editor_absoluteY="191dp" />

            <Spinner
                android:id="@+id/edTxtPregunta2"
                android:layout_width="326dp"
                android:layout_height="53dp"
                android:layout_below="@+id/txtPregunta2"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginHorizontal="40dp"
                android:layout_marginStart="20sp"
                android:layout_marginTop="10sp"
                android:layout_marginEnd="20sp"
                android:backgroundTint="#ECECEC"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:textColor="#4D4C4C"
                android:prompt="@string/R1P1"
                android:entries="@array/RespuestasP2"
                tools:layout_editor_absoluteX="44dp"
                tools:layout_editor_absoluteY="245dp" />

            <TextView
                android:id="@+id/txtPregunta3"
                style="@style/Widget.AppCompat.AutoCompleteTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edTxtPregunta2"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginHorizontal="40dp"
                android:layout_marginStart="20sp"
                android:layout_marginTop="10sp"
                android:layout_marginEnd="20sp"
                android:backgroundTint="#FFF"
                android:ems="10"
                android:selectAllOnFocus="false"
                android:singleLine="false"
                android:text="@string/Pregunta3"
                android:textColor="#365B6D"
                android:textSize="14sp"
                android:typeface="normal"
                tools:layout_editor_absoluteX="43dp"
                tools:layout_editor_absoluteY="191dp" />

            <Spinner
                android:id="@+id/edTxtPregunta3"
                android:layout_width="326dp"
                android:layout_height="53dp"
                android:layout_below="@+id/txtPregunta3"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginHorizontal="40dp"
                android:layout_marginStart="20sp"
                android:layout_marginTop="10sp"
                android:layout_marginEnd="20sp"
                android:backgroundTint="#ECECEC"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:textColor="#4D4C4C"
                android:prompt="@string/R1P1"
                android:entries="@array/RespuestasP3"
                tools:layout_editor_absoluteX="44dp"
                tools:layout_editor_absoluteY="245dp" />

            <TextView
                android:id="@+id/txtPregunta4"
                style="@style/Widget.AppCompat.AutoCompleteTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edTxtPregunta3"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginHorizontal="40dp"
                android:layout_marginStart="20sp"
                android:layout_marginTop="10sp"
                android:layout_marginEnd="20sp"
                android:backgroundTint="#FFF"
                android:ems="10"
                android:selectAllOnFocus="false"
                android:singleLine="false"
                android:text="@string/Pregunta4"
                android:textColor="#365B6D"
                android:textSize="14sp"
                android:typeface="normal"
                tools:layout_editor_absoluteX="43dp"
                tools:layout_editor_absoluteY="191dp" />

            <Spinner
                android:id="@+id/edTxtPregunta4"
                android:layout_width="326dp"
                android:layout_height="53dp"
                android:layout_below="@+id/txtPregunta4"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginHorizontal="40dp"
                android:layout_marginStart="20sp"
                android:layout_marginTop="10sp"
                android:layout_marginEnd="20sp"
                android:backgroundTint="#ECECEC"
                android:ems="10"
                android:prompt="@string/R1P1"
                android:entries="@array/RespuestasP4"
                android:inputType="textEmailAddress"
                android:textColor="#4D4C4C"
                tools:layout_editor_absoluteX="44dp"
                tools:layout_editor_absoluteY="245dp" />

            <TextView
                android:id="@+id/txtPregunta5"
                style="@style/Widget.AppCompat.AutoCompleteTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edTxtPregunta4"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginHorizontal="40dp"
                android:layout_marginStart="20sp"
                android:layout_marginTop="10sp"
                android:layout_marginEnd="20sp"
                android:backgroundTint="#FFF"
                android:ems="10"
                android:selectAllOnFocus="false"
                android:singleLine="false"
                android:text="@string/Pregunta5"
                android:textColor="#365B6D"
                android:textSize="14sp"
                android:typeface="normal"
                tools:layout_editor_absoluteX="43dp"
                tools:layout_editor_absoluteY="191dp" />

            <Spinner
                android:id="@+id/edTxtPregunta5"
                android:layout_width="326dp"
                android:layout_height="53dp"
                android:layout_below="@+id/txtPregunta5"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginHorizontal="40dp"
                android:layout_marginStart="20sp"
                android:layout_marginTop="10sp"
                android:layout_marginEnd="20sp"
                android:backgroundTint="#ECECEC"
                android:ems="10"
                android:prompt="@string/R1P1"
                android:entries="@array/RespuestasP5"
                android:inputType="textEmailAddress"
                android:textColor="#4D4C4C"
                tools:layout_editor_absoluteX="44dp"
                tools:layout_editor_absoluteY="245dp" />

            <Button
                android:id="@+id/BtnEnviar"
                android:layout_width="330dp"
                android:layout_height="70dp"
                android:layout_below="@+id/edTxtPregunta5"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="30sp"
                android:layout_marginTop="30sp"
                android:layout_marginEnd="30sp"
                android:backgroundTint="#365B6D"
                android:fontFamily="sans-serif-medium"
                android:onClick="ShowPopup"
                android:text="Enviar"
                android:textAlignment="center"
                android:textColor="#FFF"
                android:textStyle="bold"
                android:typeface="monospace"
                tools:layout_editor_absoluteX="27dp"
                tools:layout_editor_absoluteY="564dp" />

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>